--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
         <script src="scripts.js"></script>
     </head>
     <body>
+        <input id="num1" type="number">
+        <input id="num2" type="number">
+        <button id="btnAdd" onclick="add()">Add</button>
+        <button id="btnSubtract" onclick="subtract()">Subtract</button>
+        <button id="btnMultiply" onclick="multiply()">Multiply</button>
+        <button id="btnDivide" onclick="divide()">Divide</button>
     </body>
 </html>
