disable buttons and give wait message while waiting

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <body>
         <input id="num1" type="number">
         <input id="num2" type="number">
-        <button id="btnAdd" onclick="add()">Add</button>
-        <button id="btnSubtract" onclick="subtract()">Subtract</button>
-        <button id="btnMultiply" onclick="multiply()">Multiply</button>
-        <button id="btnDivide" onclick="divide()">Divide</button>
+        <button class="calcButton" id="btnAdd" onclick="add()">Add</button>
+        <button class="calcButton" onclick="subtract()">Subtract</button>
+        <button class="calcButton" onclick="multiply()">Multiply</button>
+        <button class="calcButton" onclick="divide()">Divide</button>
+        <div id="messages"></div>
     </body>
 </html>
